@@ -1,6 +1,9 @@
 2005-12-04 Perry
  PATCH: [ 1372974 ] Make local function "GuessEncoding_from_bytes" static
   Src: codepage_detect.cpp
+ PATCH: [ 1368762 ] Fix assignment in DirScan_GetItems
+  Also add explanatory comment, for what variable does.
+  Src: DirScan.cpp
 
 2005-12-04 Jochen
  CMarkdown::FileImage::GuessByteOrder(), GuessCodepageEncoding(): Fix UTF-8 signature detection
